RESOLVED FIXED85502
Regression in animation causes disappearing paths
https://bugs.webkit.org/show_bug.cgi?id=85502
Summary Regression in animation causes disappearing paths
Philip Rogers
Reported 2012-05-03 08:24:05 PDT
In the following example, animated paths disappear: http://jsfiddle.net/VjMvz/ This bug was originally reported at crbug.com/119688 The root cause of this issue is a regression caused by https://bugs.webkit.org/show_bug.cgi?id=63553. Patch forthcoming!
Attachments
Fix numeric precision issue in SVG animations (6.26 KB, patch)
2012-05-03 08:30 PDT, Philip Rogers
no flags
Clean up the percent calculation; modf wasn't necessary. (6.21 KB, patch)
2012-05-03 10:42 PDT, Philip Rogers
no flags
Philip Rogers
Comment 1 2012-05-03 08:30:11 PDT
Created attachment 140022 [details] Fix numeric precision issue in SVG animations
Philip Rogers
Comment 2 2012-05-03 10:42:40 PDT
Created attachment 140046 [details] Clean up the percent calculation; modf wasn't necessary.
Dirk Schulze
Comment 3 2012-05-03 14:23:52 PDT
Comment on attachment 140046 [details] Clean up the percent calculation; modf wasn't necessary. LGTM. r=me
WebKit Review Bot
Comment 4 2012-05-03 15:44:13 PDT
Comment on attachment 140046 [details] Clean up the percent calculation; modf wasn't necessary. Clearing flags on attachment: 140046 Committed r116030: <http://trac.webkit.org/changeset/116030>
WebKit Review Bot
Comment 5 2012-05-03 15:44:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.