Fix numeric precision issue in SVG animations https://bugs.webkit.org/show_bug.cgi?id=85502

Reviewed by Dirk Schulze.

Source/WebCore:

r93938 had a bug where floating point numbers where compared exactly,
exposing a bug when floating point precision was not sufficient. This
change compares against an epsilon value to get around these precision
issues.

Test: svg/animations/animate-end-attribute-numeric-precision.html

* svg/animation/SVGSMILElement.cpp:
(WebCore::SVGSMILElement::calculateAnimationPercentAndRepeat):

LayoutTests:

* svg/animations/animate-end-attribute-numeric-precision-expected.txt: Added.
* svg/animations/animate-end-attribute-numeric-precision.html: Added.
* svg/animations/script-tests/animate-end-attribute-numeric-precision.js: Added.
(sample1):
(sample2):
(executeTest):


Canonical link: https://commits.webkit.org/103103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116030 268f45cc-cd09-0410-ab3c-d52691b4dbfc